<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Crud Mobile</string>

    <string name="bt_add">ADD EMPLOYEE</string>
    <string name="rv_header">EMPLOYEES LIST</string>
    <string name="tv_records_status">No employees…</string>
    <string name="iv_edit">Edit Image</string>
    <string name="iv_delete">Delete Image</string>
    <string name="tv_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="tv_update">UPDATE</string>
    <string name="eth_enter_name">Enter Name</string>
    <string name="tv_update_name">Name</string>
    <string name="tv_update_email">Email ID</string>
    <string name="et_update_email">Enter Email ID</string>
    <string name="tv_update_title">UPDATE RECORD</string>
    <string name="tvh_login">LOGIN</string>
    <string name="btn_Login">login</string>
    <string name="tvh_signup">SIGNUP</string>
    <string name="btn_signup">signup</string>
    <string name="tv_name">Name</string>
    <string name="et_name">Enter name</string>
    <string name="tv_email">Email</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="et_confirm_password">Confirm Password</string>
    <string name="et_signup_name">Name</string>
    <string name="tv_go_login">Already have an account?</string>
    <string name="tv_go_signup">Need an account?</string>
    <string name="iv_edit_image">Edit image</string>
    <string name="btnLogout">logout</string>
    <string name="et_main_email">Enter email</string>
    <string name="tv_sms_title">SMS Message</string>
    <string name="create_report">Create Report</string>
    <string name="view_reports">View Reports</string>
    <string name="tv_reporter">REPORTER</string>
    <string name="eth_name">Name</string>
    <string name="tv_date_and_time">DATE AND TIME</string>
    <string name="tv_incident_type">INCIDENT TYPE</string>
    <string name="btn_injury">Injury</string>
    <string name="btn_near_miss">Near Miss</string>
    <string name="btn_death">Death</string>
    <string name="et_incident_description">What are the factors/causes that lead to such an incident?</string>
    <string name="tv_incident_description">INCIDENT DESCRIPTION</string>
    <string name="tv_witnesses">WITNESSES</string>
    <string name="tv_location">LOCATION</string>
    <string name="et_detailed_location">Detailed location</string>
    <string name="tv_reports_monitor">REPORTS</string>
    <string name="tv_report">REPORT</string>
    <string name="tv_report_reporter">Reporter:</string>
    <string name="tv_report_date_time"><![CDATA[Date & Time:]]></string>
    <string name="tv_report_incident_type">Incident Type:</string>
    <string name="tv_report_incident_description">Incident Description:</string>
    <string name="tv_report_witnesses">Witnesses:</string>
    <string name="tv_report_location">Location:</string>
    <string name="btn_back">BACK</string>
    <string name="tvh_row_reporter">Reporter:</string>
    <string name="tvh_row_incident_type">Incident Type:</string>
    <string name="tv_no_reports">No reports…</string>
    <string name="btn_select_date">SELECT DATE</string>
    <string name="btn_select_time">SELECT TIME</string>
    <string name="et_witnesses">Who were the people that was able to witness the incident? (e.g. John, Mark, Sam)</string>
    <string name="submit">SUBMIT</string>
    <string name="tv_created_at">Report Creation Date:</string>
    <string name="tv_phone_number">Phone Number:</string>
    <string name="tv_form_phone_number">PHONE NUMBER</string>
    <string name="et_form_phone_number">Your phone number</string>
</resources>