<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:paddingTop="18dp"
    android:paddingBottom="18dp">
    <!-- Background drawable is set programmatically -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/tv_update_title"
        android:padding="5dp"
        app:drawableLeftCompat="@drawable/ic_baseline_edit_24"
        app:drawableTint="@color/green_light"
        android:drawablePadding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/tv_update_name"
            android:textColor="@color/green_light"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etUpdateName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.75"
            android:inputType="text"
            android:importantForAutofill="no"
            android:textColor="@color/green_light"
            android:textColorHint="@color/green_dark"
            android:backgroundTint="@color/green_light"
            android:hint="@string/eth_enter_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/tv_update_email"
            android:textColor="@color/green_light"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etUpdateEmailId"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.75"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textColor="@color/green_light"
            android:textColorHint="@color/green_dark"
            android:backgroundTint="@color/green_light"
            android:hint="@string/et_update_email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_update"
            android:background="@drawable/bg_green_outline"
            android:textColor="@color/green_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_cancel"
            android:background="@drawable/bg_green_fill"
            android:textColor="@color/navy_blue"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>