<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/navy_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btn_back"
            android:textColor="@color/green_light"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            app:iconTint="@color/green_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/tv_report"
            android:textSize="25sp"
            android:textColor="@color/green_light"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.22"
                    android:text="@string/tv_report_reporter"
                    android:textSize="15sp"
                    android:textColor="@color/green_dark"/>
                <TextView
                    android:id="@+id/tvReportReporter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    tools:text="reporter"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.32"
                    android:text="@string/tv_report_date_time"
                    android:textSize="15sp"
                    android:textColor="@color/green_dark"/>
                <TextView
                    android:id="@+id/tvReportDateTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    tools:text="date and time"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.38"
                    android:text="@string/tv_report_incident_type"
                    android:textSize="15sp"
                    android:textColor="@color/green_dark"/>
                <TextView
                    android:id="@+id/tvReportIncidentType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    tools:text="Injury/Near Miss/Death"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/tv_report_incident_description"
                    android:textSize="15sp"
                    android:textColor="@color/green_dark"/>
                <TextView
                    android:id="@+id/tvReportIncidentDescription"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    tools:text="Description"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.27"
                    android:text="@string/tv_report_witnesses"
                    android:textSize="15sp"
                    android:textColor="@color/green_dark"/>
                <TextView
                    android:id="@+id/tvReportWitnesses"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    tools:text="Witnesses"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.22"
                    android:text="@string/tv_report_location"
                    android:textSize="15sp"
                    android:textColor="@color/green_dark"/>
                <TextView
                    android:id="@+id/tvReportLocation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    tools:text="Location"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.67"
                    android:text="@string/tv_created_at"
                    android:textSize="15sp"
                    android:textColor="@color/green_dark"/>
                <TextView
                    android:id="@+id/tvCreatedAt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:textStyle="bold"
                    tools:text="Created At"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>