<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clReportsMonitor"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/navy_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btn_back"
            android:textColor="@color/green_light"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            app:iconTint="@color/green_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/tv_reports_monitor"
            android:textSize="25sp"
            android:textColor="@color/green_light"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchIncidentReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/SearchViewStyle"
            android:background="@drawable/bg_green_outline"
            android:textCursorDrawable="@null"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="Report or Incident Type..."/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReportsMonitor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            tools:visibility="gone"/>

        <TextView
            android:id="@+id/tvNoReports"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_no_reports"
            android:textSize="18sp"
            android:textColor="@color/green_dark"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>